--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^10.12.4",
     "gh-pages": "^5.0.0",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-scripts": "5.0.1",
@@ -48,6 +49,7 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
+    "@types/react-beautiful-dnd": "^13.1.4",
     "prettier": "^2.8.7",
     "prettier-plugin-tailwindcss": "^0.2.7",
     "tailwindcss": "^3.3.1"
